--- a/app/views/common/components/_options_dropdown.html.erb
+++ b/app/views/common/components/_options_dropdown.html.erb
@@ -17,7 +17,7 @@
     <div>
       <button
         type="button"
-        class="flex items-center rounded-full hover:bg-light-gray-100 text-gray-300 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-500"
+        class="flex items-center rounded-full cursor-pointer hover:bg-light-gray-100 text-gray-300 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-500"
         id="<%= unique_id %>"
         aria-expanded="true"
         aria-haspopup="true"
@@ -39,10 +39,10 @@
       data-common--options-dropdown-target="menu"
     >
       <div class="py-1" role="none">
-        <% items.each_with_index do |item, index| %>
+        <% items.compact.each_with_index do |item, index| %>
           <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
           <%= capture do %>
-            <%= item.call("block px-4 py-2 text-sm text-gray-700", index: index) %>
+            <%= item.call("cursor-pointer block px-4 py-2 text-sm text-gray-700", index: index) %>
           <% end %>
         <% end %>
       </div>
