--- a/app/views/sales/sales_orders/cancels/create.turbo_stream.erb
+++ b/app/views/sales/sales_orders/cancels/create.turbo_stream.erb
@@ -1,5 +1,5 @@
-<%= turbo_stream.replace "sales_order_item_line_#{@sales_order_item.id}" do %>
-  <%= render "sales/sales_orders/sales_order_item_line", sales_order: @sales_order, sales_order_item: @sales_order_item %>
+<%= turbo_stream.replace dom_id(@sales_order) do %>
+  <%= render "sales/sales_orders/sales_order", sales_order: @sales_order %>
 <% end %>
 
 <%= turbo_stream.replace "flash", partial: "common/flash" %>
