--- a/app/views/sales/orders/_item_actions.html.erb
+++ b/app/views/sales/orders/_item_actions.html.erb
@@ -1,9 +1,9 @@
-<%# locals: (sales_order:, sales_order_item:) %>
+<%# locals: (order:, item:) %>
 
 <div class="flex items-center gap-1">
-  <%= turbo_frame_tag "sales_order_item_split_actions_#{sales_order_item.id}", class: "contents" do %>
-    <% if sales_order_item.can_split? %>
-      <%= link_to(split_sales_order_sales_order_item_path(sales_order, sales_order_item),
+  <%= turbo_frame_tag "item_split_actions_#{item.id}", class: "contents" do %>
+    <% if item.can_split? %>
+      <%= link_to(split_sales_order_item_path(order, item),
         class: "text-gray-300 hover:text-gray-700 transition",
         title: t(".split"),
       ) do %>
@@ -12,8 +12,8 @@
       <% end %>
     <% end %>
 
-    <% if sales_order_item.confirmed? %>
-      <%= button_to(work_on_sales_order_sales_order_item_path(sales_order, sales_order_item),
+    <% if item.confirmed? %>
+      <%= button_to(work_on_sales_order_item_path(order, item),
         class: "cursor-pointer text-yellow hover:text-yellow-900 transition",
         method: :post,
         form_class: "contents",
@@ -23,8 +23,8 @@
       <% end %>
     <% end %>
 
-    <% if sales_order_item.in_progress? %>
-      <%= button_to(complete_sales_order_sales_order_item_path(sales_order, sales_order_item),
+    <% if item.in_progress? %>
+      <%= button_to(complete_sales_order_item_path(order, item),
         class: "cursor-pointer text-blue hover:text-blue-900 transition",
         method: :post,
         form_class: "contents",
@@ -34,8 +34,8 @@
       <% end %>
     <% end %>
 
-    <% if sales_order_item.ready? %>
-      <%= button_to(deliver_sales_order_sales_order_item_path(sales_order, sales_order_item),
+    <% if item.ready? %>
+      <%= button_to(deliver_sales_order_item_path(order, item),
         class: "cursor-pointer text-green hover:text-green-900 transition",
         method: :post,
         form_class: "contents",
@@ -49,12 +49,12 @@
         (->(classes, index:) do
           button_to(
             t(".cancel"),
-            cancel_sales_order_sales_order_item_path(sales_order, sales_order_item),
+            cancel_sales_order_item_path(order, item),
             method: :post,
             data: { turbo_confirm: t("messages.are_you_sure") },
             class: "#{classes} text-red-500",
           )
-        end if sales_order_item.can_cancel?)
+        end if item.can_cancel?)
       ] %>
     <%= render("common/components/options_dropdown", items: items) if items.any? %>
   <% end %>
