--- a/app/views/sales/orders/_order_fields.html.erb
+++ b/app/views/sales/orders/_order_fields.html.erb
@@ -1,11 +1,12 @@
+<%# locals: (order:, form:) %>
 <div class="col-span-6 lg:col-span-3 grid grid-cols-1 gap-x-6 gap-y-8 p-4 sm:px-6 overflow-hidden rounded-lg bg-white-100 shadow-sm">
-  <%= form.hidden_field :id, value: sales_order.id, readonly: true %>
+  <%= form.hidden_field :id, value: order.id, readonly: true %>
 
   <div>
-    <h3 class="mb-8 text-base font-semibold text-gray-900"><%= SalesOrder.human_attribute_name(:client) %></h3>
+    <h3 class="mb-8 text-base font-semibold text-gray-900"><%= Sales::Order.human_attribute_name(:client) %></h3>
     <div class="mt-2">
-      <%= form.text_field :client_name, value: sales_order.client.name, disabled: true, readonly: true, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 disabled:outline-gray-300 sm:text-sm sm:leading-6" %>
-      <%= form.hidden_field :client_id, value: sales_order.client_id, readonly: true %>
+      <%= form.text_field :client_name, value: order.client.name, disabled: true, readonly: true, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 disabled:outline-gray-300 sm:text-sm sm:leading-6" %>
+      <%= form.hidden_field :client_id, value: order.client_id, readonly: true %>
     </div>
   </div>
 
@@ -16,7 +17,7 @@
         <%= form.number_field :cash_discount_percentage,
           placeholder: true,
           class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-sm sm:leading-6",
-          data: { "action": "sales--sales-orders--form#updateTotals" }
+          data: { "action": "sales--orders--form#updateTotals" }
         %>
         <span class="pointer-events-none col-start-1 row-start-1 mr-3 size-5 self-center justify-self-end text-gray-100 sm:size-5 font-light">%</span>
       </div>
@@ -28,7 +29,7 @@
         <%= form.number_field :client_discount_percentage,
           placeholder: true,
           class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-sm sm:leading-6",
-          data: { "action": "sales--sales-orders--form#updateTotals" }
+          data: { "action": "sales--orders--form#updateTotals" }
         %>
         <span class="pointer-events-none col-start-1 row-start-1 mr-3 size-5 self-center justify-self-end text-gray-100 sm:size-5 font-light">%</span>
       </div>
