--- a/app/views/sales/orders/edit.html.erb
+++ b/app/views/sales/orders/edit.html.erb
@@ -3,12 +3,12 @@
   breadcrumbs: [
     { title: t("navigation.dashboard"), path: sales_root_path },
     { title: t("sales.orders.index.title"), path: sales_orders_path },
-    { title: @sales_order.name, path: sales_order_path(@sales_order) },
+    { title: @order.name, path: sales_order_path(@order) },
     { title: t("navigation.edit"), path: new_sales_order_path },
   ],
-  title: t(".title", client_name: @sales_order.client_name, status: t("activerecord.attributes.sales_order.status_values.#{@sales_order.status}")),
+  title: t(".title", client_name: @order.client_name, status: t("activerecord.attributes.sales/order.status_values.#{@order.status}")),
 ) %>
 
 <div class="w-full">
-  <%= render "form", sales_order: @sales_order %>
+  <%= render "form", order: @order %>
 </div>
