--- a/app/views/sales/orders/fulfill/create.turbo_stream.erb
+++ b/app/views/sales/orders/fulfill/create.turbo_stream.erb
@@ -1,5 +1,5 @@
-<%= turbo_stream.replace dom_id(@sales_order) do %>
-  <%= render "sales/orders/sales_order", sales_order: @sales_order %>
+<%= turbo_stream.replace dom_id(@order) do %>
+  <%= render "sales/orders/order", order: @order %>
 <% end %>
 
 <%= turbo_stream.replace "flash", partial: "common/flash" %>
