--- a/app/views/sales/orders/items/deliveries/create.turbo_stream.erb
+++ b/app/views/sales/orders/items/deliveries/create.turbo_stream.erb
@@ -1,5 +1,5 @@
-<%= turbo_stream.replace "sales_order_item_line_#{@sales_order_item.id}" do %>
-  <%= render "sales/orders/sales_order_item_line", sales_order: @sales_order, sales_order_item: @sales_order_item %>
+<%= turbo_stream.replace "item_line_#{@item.id}" do %>
+  <%= render "sales/orders/item_line", order: @order, item: @item %>
 <% end %>
 
 <%= turbo_stream.replace "flash", partial: "common/flash" %>
