--- a/app/views/sales/orders/items/splits/create.html.erb
+++ b/app/views/sales/orders/items/splits/create.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "sales_order_item_line_#{@sales_order_item.id}" do %>
-  <%= render "sales/orders/sales_order_item_line", sales_order: @sales_order, sales_order_item: @sales_order_item %>
-  <%= render "sales/orders/sales_order_item_line", sales_order: @sales_order, sales_order_item: @new_sales_order_item %>
+<%= turbo_frame_tag "item_line_#{@item.id}" do %>
+  <%= render "sales/orders/item_line", order: @order, item: @item %>
+  <%= render "sales/orders/item_line", order: @order, item: @new_item %>
 <% end %>
