--- a/app/views/sales/orders/items/splits/new.html.erb
+++ b/app/views/sales/orders/items/splits/new.html.erb
@@ -1,3 +1,3 @@
-<%= turbo_frame_tag "sales_order_item_split_actions_#{@sales_order_item.id}" do %>
-  <%= render "form", sales_order_item: @sales_order_item %>
+<%= turbo_frame_tag "item_split_actions_#{@item.id}" do %>
+  <%= render "form", item: @item %>
 <% end %>
