--- a/app/views/sales/orders/preview.html.erb
+++ b/app/views/sales/orders/preview.html.erb
@@ -1,3 +1,3 @@
-<%= turbo_frame_tag "sales_order_totals_preview" do %>
-  <%= render "sales_order_totals", sales_order: @sales_order %>
+<%= turbo_frame_tag "order_totals_preview" do %>
+  <%= render "order_totals", order: @order %>
 <% end %>
