--- a/app/views/sales/orders/show.html.erb
+++ b/app/views/sales/orders/show.html.erb
@@ -3,12 +3,12 @@
   breadcrumbs: [
     { title: t("navigation.dashboard"), path: sales_root_path },
     { title: t("sales.orders.index.title"), path: sales_orders_path },
-    { title: @sales_order.name, path: sales_order_path(@sales_order) },
+    { title: @order.name, path: sales_order_path(@order) },
   ],
-  title: @sales_order.name,
+  title: @order.name,
   actions: [
-    ({ label: t("navigation.edit"), path: edit_sales_order_path(@sales_order), method: :get } if @sales_order.quote?),
+    ({ label: t("navigation.edit"), path: edit_sales_order_path(@order), method: :get } if @order.quote?),
   ],
 ) %>
 
-<%= render "sales/orders/sales_order", sales_order: @sales_order %>
+<%= render "sales/orders/order", order: @order %>
