--- a/app/views/sales/orders/_order.html.erb
+++ b/app/views/sales/orders/_order.html.erb
@@ -102,12 +102,19 @@
     </div>
   </div>
 
-  <div class="grid grid-cols-1 gap-8 mt-6">
+  <div class="flex gap-6 mt-16">
     <% if order.confirmed? %>
       <%= button_to t(".fulfill"),
         fulfill_sales_order_path(order),
         method: :post,
         class: "btn-primary" %>
+    <% end %>
+    <% if order.can_cancel? %>
+      <%= button_to t(".cancel"),
+        sales_order_path(order),
+        method: :delete,
+        class: "btn-danger",
+        data: { turbo_confirm: t("messages.are_you_sure") } %>
     <% end %>
   </div>
 </div>
