Adjust responsive columns

--- a/app/views/common/components/_options_dropdown.html.erb
+++ b/app/views/common/components/_options_dropdown.html.erb
@@ -3,7 +3,7 @@
 <% unique_id = "options-dropdown-button-#{SecureRandom.uuid}" %>
 
 <div
-  class="mt-4 flex self-end md:self-center flex-shrink-0 md:ml-4 md:mt-0"
+  class="flex self-end md:self-center flex-shrink-0 md:ml-4"
   data-controller="common--options-dropdown"
   data-common--options-dropdown-bottom-position-class="top-auto"
   data-common--options-dropdown-left-position-class="right-0"
