--- a/app/views/sales/orders/index.html.erb
+++ b/app/views/sales/orders/index.html.erb
@@ -57,10 +57,10 @@
                 <th scope="col" class="px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :status_order, Sales::Order.human_attribute_name(:status), class: "flex justify-center", data: { turbo_action: "advance"}) %>
                 </th>
-                <th scope="col" class="px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                <th scope="col" class="hidden md:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :status_changed_at_order, Sales::Order.human_attribute_name(:status_changed_at), class: "flex justify-center", data: { turbo_action: "advance"}) %>
                 </th>
-                <th scope="col" class="hidden sm:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                <th scope="col" class="hidden lg:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :total_price, Sales::Order.human_attribute_name(:total_price), class: "flex justify-end", data: { turbo_action: "advance"}) %>
                 </th>
               </tr>
@@ -74,10 +74,10 @@
                       <span class="sr-only"><%= t(".view_order") %> </span><span><%= order.id %></span>
                     <% end %>
                   </td>
-                  <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
                     <%= order.client_name %>
                   </td>
-                  <td class="py-3 pl-4 pr-3 text-sm font-medium text-gray-900">
+                  <td class="hidden sm:table-cell py-3 pl-4 pr-3 text-sm font-medium text-gray-900">
                     <%= order.products.map(&:name).uniq.to_sentence %> (<%= order.items.map(&:quantity).sum %>)
                   </td>
                   <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-center">
@@ -85,7 +85,7 @@
                       <%= t(order.status, scope: ["activerecord.attributes.sales/order.status_values"]) %>
                     <% end %>
                   </td>
-                  <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-center">
+                  <td class="hidden md:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-center">
                     <%= l(order.status_changed_at, format: :short) %>
                   </td>
                   <td class="hidden lg:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500 text-right tabular-nums">
