--- a/app/views/sales/orders/_form.html.erb
+++ b/app/views/sales/orders/_form.html.erb
@@ -45,7 +45,9 @@
           <% end %>
         </div>
 
-        <button type="button" data-action="common--nested-form#addItem" class="cursor-pointer"><%= heroicon("plus-circle", options: { class: "size-8 text-blue" }) %></button>
+        <div class="flex">
+          <button type="button" data-action="common--nested-form#addItem" class="cursor-pointer"><%= heroicon("plus-circle", options: { class: "size-8 text-blue" }) %></button>
+        </div>
       </div>
     </div>
 
