Fix sales product search

--- a/app/views/sales/orders/_item_fields.html.erb
+++ b/app/views/sales/orders/_item_fields.html.erb
@@ -17,7 +17,7 @@
       input_value: item.product_id,
       search_value: item&.product_name,
       input_classes: item.errors.any? ? "outline-red text-xs/6" : "text-xs/6",
-      url: factory_products_path,
+      url: sales_products_path,
     ) %>
     <div>
       <div class="grid grid-cols-1">
