--- a/app/views/sales/orders/_order_fields.html.erb
+++ b/app/views/sales/orders/_order_fields.html.erb
@@ -16,7 +16,9 @@
       <div class="mt-2 grid grid-cols-1">
         <%= form.number_field :cash_discount_percentage,
           placeholder: true,
-          class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-sm sm:leading-6",
+          disabled: true,
+          readonly: true,
+          class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 disabled:outline-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-sm sm:leading-6",
           data: { "action": "sales--orders--form#updateTotals" }
         %>
         <span class="pointer-events-none col-start-1 row-start-1 mr-3 size-5 self-center justify-self-end text-gray-100 sm:size-5 font-light">%</span>
@@ -28,7 +30,9 @@
       <div class="mt-2 grid grid-cols-1">
         <%= form.number_field :client_discount_percentage,
           placeholder: true,
-          class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-sm sm:leading-6",
+          disabled: true,
+          readonly: true,
+          class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 disabled:outline-gray-300  focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-sm sm:leading-6",
           data: { "action": "sales--orders--form#updateTotals" }
         %>
         <span class="pointer-events-none col-start-1 row-start-1 mr-3 size-5 self-center justify-self-end text-gray-100 sm:size-5 font-light">%</span>
