--- a/app/views/common/components/_activities.html.erb
+++ b/app/views/common/components/_activities.html.erb
@@ -27,10 +27,7 @@
           </div>
 
           <% if audit_log.action == "update" && audit_log.audited_changes.keys.any? %>
-            <div
-              data-controller="common--expand-collapse"
-              class="p-3 rounded-md border border-light-gray-300"
-            >
+            <div class="p-3 rounded-md border border-light-gray-300">
               <% audit_log.audited_changes.each do |field, values| %>
                 <div class="mb-2 last:mb-0">
                   <div class="text-xs/5 font-bold text-gray-700 mb-1">
