--- a/app/views/sales/orders/_item_fields.html.erb
+++ b/app/views/sales/orders/_item_fields.html.erb
@@ -27,7 +27,7 @@
           placeholder: true,
           disabled: true,
           readonly: true,
-          class: "col-start-1 row-start-1 block w-full rounded-md border-0 pl-5 py-1.5 text-xs/6 text-gray-900 shadow-sm placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 disabled:outline-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:leading-6 #{ 'outline-red' if item.errors.any? }",
+          class: "col-start-1 row-start-1 block w-full rounded-md border-0 pl-5 py-1.5 text-xs/6 text-gray-900 shadow-sm placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:leading-6 #{ 'outline-red' if item.errors.any? }",
           data: {
             "sales--orders--form-product-target": "price",
             "action": "sales--orders--form#updateTotals",
