--- a/app/views/sales/orders/_order_fields.html.erb
+++ b/app/views/sales/orders/_order_fields.html.erb
@@ -5,7 +5,11 @@
   <div>
     <h3 class="mb-8 text-base font-semibold text-gray-900"><%= Sales::Order.human_attribute_name(:client) %></h3>
     <div class="mt-2">
-      <%= form.text_field :client_name, value: order.client.name, disabled: true, readonly: true, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 disabled:outline-gray-300 sm:text-sm sm:leading-6" %>
+      <%= form.text_field :client_name,
+        value: order.client.name,
+        disabled: true,
+        readonly: true,
+        class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 sm:text-sm sm:leading-6" %>
       <%= form.hidden_field :client_id, value: order.client_id, readonly: true %>
     </div>
   </div>
@@ -18,7 +22,7 @@
           placeholder: true,
           disabled: true,
           readonly: true,
-          class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 disabled:outline-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-sm sm:leading-6",
+          class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 sm:text-sm sm:leading-6",
           data: { "action": "sales--orders--form#updateTotals" }
         %>
         <span class="pointer-events-none col-start-1 row-start-1 mr-3 size-5 self-center justify-self-end text-gray-100 sm:size-5 font-light">%</span>
@@ -32,7 +36,7 @@
           placeholder: true,
           disabled: true,
           readonly: true,
-          class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 disabled:outline-gray-300  focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-sm sm:leading-6",
+          class: "col-start-1 row-start-1 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm placeholder:text-gray-300 disabled:cursor-not-allowed disabled:bg-light-gray-100 disabled:text-gray-500 sm:text-sm sm:leading-6",
           data: { "action": "sales--orders--form#updateTotals" }
         %>
         <span class="pointer-events-none col-start-1 row-start-1 mr-3 size-5 self-center justify-self-end text-gray-100 sm:size-5 font-light">%</span>
