--- a/app/views/sales/dashboard/index.html.erb
+++ b/app/views/sales/dashboard/index.html.erb
@@ -1,3 +1,38 @@
+<%= turbo_frame_tag "dashboard_sales_order_items" do %>
+  <div class="col-span-1 xl:col-span-2">
+    <div class="grid gap-8 grid-cols-1 lg:grid-cols-2">
+      <div>
+        <%= render("sales/dashboard/orders/items",
+        items: @confirmed_items,
+        title: t(".orders.items.confirmed.title"),
+        no_items: t(".orders.items.confirmed.no_items"),
+        status: :confirmed) %>
+      </div>
+      <div>
+        <%= render("sales/dashboard/orders/items",
+        items: @in_progress_items,
+        title: t(".orders.items.in_progress.title"),
+        no_items: t(".orders.items.in_progress.no_items"),
+        status: :in_progress) %>
+      </div>
+      <div>
+        <%= render("sales/dashboard/orders/items",
+        items: @ready_items,
+        title: t(".orders.items.ready.title"),
+        no_items: t(".orders.items.ready.no_items"),
+        status: :ready) %>
+      </div>
+      <div>
+        <%= render("sales/dashboard/orders/items",
+        items: @delivered_items,
+        title: t(".orders.items.delivered.title"),
+        no_items: t(".orders.items.delivered.no_items"),
+        status: :delivered) %>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <div class="col-span-1 xl:col-span-2">
   <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
     <h3 class="text-base font-semibold text-gray-900"><%= t("titles.recent_activities") %></h3>
