--- a/app/views/sales/orders/items/deliveries/create.turbo_stream.erb
+++ b/app/views/sales/orders/items/deliveries/create.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.replace "item_line_#{@item.id}" do %>
-  <%= render "sales/orders/item_line", order: @order, item: @item %>
+  <%= render "sales/orders/item_line", item: @item %>
 <% end %>
 
 <%= turbo_stream.replace "flash", partial: "common/flash" %>
