--- a/app/views/sales/dashboard/orders/_item_actions.html.erb
+++ b/app/views/sales/dashboard/orders/_item_actions.html.erb
@@ -8,7 +8,7 @@
       form_class: "contents",
       title: t("sales.orders.item_actions.work_on"),
     ) do %>
-      <%= heroicon("hand-raised", variant: "outline", options: { class: "size-6", "aria-label": "hand-raised" }) %>
+      <%= heroicon("hand-raised", variant: "outline", options: { class: "size-6", "aria-label": "work on" }) %>
     <% end %>
   <% end %>
 
@@ -19,7 +19,7 @@
       form_class: "contents",
       title: t("sales.orders.item_actions.complete"),
     ) do %>
-      <%= heroicon("cube", variant: "outline", options: { class: "size-6", "aria-label": "cube" }) %>
+      <%= heroicon("cube", variant: "outline", options: { class: "size-6", "aria-label": "complete" }) %>
     <% end %>
   <% end %>
 
@@ -30,7 +30,7 @@
       form_class: "contents",
       title: t("sales.orders.item_actions.deliver"),
     ) do %>
-      <%= heroicon("truck", variant: "outline", options: { class: "size-6", "aria-label": "truck" }) %>
+      <%= heroicon("truck", variant: "outline", options: { class: "size-6", "aria-label": "deliver" }) %>
     <% end %>
   <% end %>
 
@@ -42,7 +42,7 @@
       title: t("sales.orders.item_actions.undo_status"),
       data: { turbo_confirm: t("sales.orders.item_actions.undo_status_confirmation") }
     ) do %>
-      <%= heroicon("arrow-uturn-left", variant: "outline", options: { class: "size-6", "aria-label": "truck" }) %>
+      <%= heroicon("arrow-uturn-left", variant: "outline", options: { class: "size-6", "aria-label": "undo" }) %>
     <% end %>
   <% end %>
 </div>
