--- a/app/views/sales/orders/_item_actions.html.erb
+++ b/app/views/sales/orders/_item_actions.html.erb
@@ -7,7 +7,7 @@
         class: "text-gray-300 hover:text-gray-700 transition",
         title: t(".split"),
       ) do %>
-        <%= heroicon("document-duplicate", variant: "outline", options: { class: "size-6", "aria-label": "plus" }) %>
+        <%= heroicon("document-duplicate", variant: "outline", options: { class: "size-6", "aria-label": "split" }) %>
         <span class="sr-only"><%= t(".split") %></span>
       <% end %>
     <% end %>
@@ -19,7 +19,7 @@
         form_class: "contents",
         title: t(".work_on"),
       ) do %>
-        <%= heroicon("hand-raised", variant: "outline", options: { class: "size-6", "aria-label": "hand-raised" }) %>
+        <%= heroicon("hand-raised", variant: "outline", options: { class: "size-6", "aria-label": "work on" }) %>
       <% end %>
     <% end %>
 
@@ -30,7 +30,7 @@
         form_class: "contents",
         title: t(".complete"),
       ) do %>
-        <%= heroicon("cube", variant: "outline", options: { class: "size-6", "aria-label": "cube" }) %>
+        <%= heroicon("cube", variant: "outline", options: { class: "size-6", "aria-label": "complete" }) %>
       <% end %>
     <% end %>
 
@@ -41,7 +41,7 @@
         form_class: "contents",
         title: t(".deliver"),
       ) do %>
-        <%= heroicon("truck", variant: "outline", options: { class: "size-6", "aria-label": "truck" }) %>
+        <%= heroicon("truck", variant: "outline", options: { class: "size-6", "aria-label": "deliver" }) %>
       <% end %>
     <% end %>
 
@@ -53,7 +53,7 @@
         title: t(".undo_status"),
         data: { turbo_confirm: t(".undo_status_confirmation") }
       ) do %>
-        <%= heroicon("arrow-uturn-left", variant: "outline", options: { class: "size-6", "aria-label": "truck" }) %>
+        <%= heroicon("arrow-uturn-left", variant: "outline", options: { class: "size-6", "aria-label": "undo" }) %>
       <% end %>
     <% end %>
 
