Fix old formula item extra decimals bug

--- a/app/views/factory/formulas/_formula_item_fields.html.erb
+++ b/app/views/factory/formulas/_formula_item_fields.html.erb
@@ -20,6 +20,7 @@
     <div>
       <%= ff.number_field(
         :proportion,
+        value: formula_item.proportion&.round(3),
         placeholder: "Porcentage %",
         min: 0,
         step: 0.001,
