--- a/app/views/factory/products/index.html.erb
+++ b/app/views/factory/products/index.html.erb
@@ -46,7 +46,7 @@
     <%= turbo_frame_tag "products_table" do %>
       <% if @products.any? %>
         <div class="inline-block min-w-full py-2 align-middle">
-          <table id="formulas" class="min-w-full divide-y divide-light-gray-900">
+          <table class="min-w-full divide-y divide-light-gray-900">
             <thead>
               <tr>
                 <th scope="col" class="py-3 text-sm font-semibold text-gray-900 group">
