--- a/app/views/office/suppliers/show.html.erb
+++ b/app/views/office/suppliers/show.html.erb
@@ -60,7 +60,9 @@
     ) %>
   </div>
 
-  <div class="col-span-1 xl:col-span-2 2xl:col-span-3">
+  <%= render "office/suppliers/products/table" %>
+
+  <div class="col-span-1 md:col-span-2 2xl:col-span-3">
     <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
       <h3 class="text-base font-semibold text-gray-900"><%= t("titles.recent_activities") %></h3>
     </div>
